centered details on desktop homepage, about to fix overlapping logo at top

--- a/src/styles/partials/_menu.scss
+++ b/src/styles/partials/_menu.scss
@@ -62,3 +62,6 @@
 .mobile-header {
     display: block;
 }
+.center-menu{
+    text-align:center;
+}
